--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -258,9 +258,9 @@
         "  # image_name[image_name.index(\".\"):] - расширение файла после точки\n",
         "  # image_name[:image_name.index(\".\")] - имя файла без расширения\n",
         "  new_image_name = f'{image_name[:image_name.index(\".\")]}_{source_lang}-{trans_lang}_translated{image_name[image_name.index(\".\"):]}'\n",
-        "  # image.save(f'/content/drive/MyDrive/Универ/ocr/images/{source_lang}/{source_lang}_translated/{new_image_name}')\n",
+        "  image.save(f'/content/drive/MyDrive/Универ/ocr/images/{source_lang}/{source_lang}_translated/{new_image_name}')\n",
         "                                                                 # {source_lang}-{trans_lang}_translated_{image_name}')\n",
-        "  image.save(new_image_name)"
+        "  # image.save(new_image_name)"
       ]
     },
     {
